docs/apache-airflow-providers-amazon/8.4.0/_sources/_api/tests/system/providers/amazon/aws/example_dynamodb_to_s3/index.rst.txt
:py:mod:`tests.system.providers.amazon.aws.example_dynamodb_to_s3`
==================================================================

.. py:module:: tests.system.providers.amazon.aws.example_dynamodb_to_s3


Module Contents
---------------


Functions
~~~~~~~~~

.. autoapisummary::

   tests.system.providers.amazon.aws.example_dynamodb_to_s3.enable_point_in_time_recovery
   tests.system.providers.amazon.aws.example_dynamodb_to_s3.set_up_table
   tests.system.providers.amazon.aws.example_dynamodb_to_s3.get_export_time
   tests.system.providers.amazon.aws.example_dynamodb_to_s3.wait_for_bucket
   tests.system.providers.amazon.aws.example_dynamodb_to_s3.delete_dynamodb_table



Attributes
~~~~~~~~~~

.. autoapisummary::

   tests.system.providers.amazon.aws.example_dynamodb_to_s3.log
   tests.system.providers.amazon.aws.example_dynamodb_to_s3.DAG_ID
   tests.system.providers.amazon.aws.example_dynamodb_to_s3.sys_test_context_task
   tests.system.providers.amazon.aws.example_dynamodb_to_s3.TABLE_ATTRIBUTES
   tests.system.providers.amazon.aws.example_dynamodb_to_s3.TABLE_KEY_SCHEMA
   tests.system.providers.amazon.aws.example_dynamodb_to_s3.TABLE_THROUGHPUT
   tests.system.providers.amazon.aws.example_dynamodb_to_s3.S3_KEY_PREFIX
   tests.system.providers.amazon.aws.example_dynamodb_to_s3.test_context
   tests.system.providers.amazon.aws.example_dynamodb_to_s3.test_run


.. py:data:: log

   

.. py:data:: DAG_ID
   :value: 'example_dynamodb_to_s3'

   

.. py:data:: sys_test_context_task

   

.. py:data:: TABLE_ATTRIBUTES

   

.. py:data:: TABLE_KEY_SCHEMA

   

.. py:data:: TABLE_THROUGHPUT

   

.. py:data:: S3_KEY_PREFIX
   :value: 'dynamodb-segmented-file'

   

.. py:function:: enable_point_in_time_recovery(table_name)


.. py:function:: set_up_table(table_name)


.. py:function:: get_export_time(table_name)


.. py:function:: wait_for_bucket(s3_bucket_name)


.. py:function:: delete_dynamodb_table(table_name)


.. py:data:: test_context

   

.. py:data:: test_run

   

